# AI2021

./: .gitignore
.ipynb_checkpoints/: Readme-checkpoint.md
ai2021s-homework#1/src/: search.py
ai2021s-homework#2/: autograder.py  multiAgents.py  multiagentTestClasses.py
final/src/: Makefile  requirements.txt  setup.cfg  setup.py
final/src/GANBandit/: data.py  draw.py  train.py  utils.py
final/src/GANBandit/model/: __init__.py  back.py  base.py  gan.py  multiclass.py  neural.py  onevsrest.py  policy.py  value.py
