[flake8]
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,.ipynb_checkpoints,tests
max-line-length = 88
extend-ignore = D203

[tool:pytest]
addopts = --suppress-no-test-exit-code --disable-warnings

[metadata]
description-file = README.md

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88

[pylint]
max-line-length = 88

[pylint.messages_control]
disable = C0330, C0326
